--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,6 +16,11 @@ body {
   margin: 1rem auto;
 }
 
+.movie-card button {
+  margin-left: 50%;
+  padding: 5px;
+}
+
 .movie-director {
   padding: 4px 0;
   font-size: 0.8rem;
@@ -75,3 +80,30 @@ body {
   color: red;
   text-align: center;
 }
+
+#updateMovie {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#movieUpdate {
+  display: flex;
+  flex-direction: column;
+  /*justify-content: center;*/
+  width: 70%;
+  /*margin: auto;*/
+}
+
+#movieUpdate input {
+  margin: 10px;
+  padding: 5px;
+}
+
+#movieUpdate button {
+  width: 200px;
+  margin: auto;
+  padding: 5px;
+}
+
+
